--- a/iBudget/Views/Home/Index.cshtml
+++ b/iBudget/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Home Page";
+
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
@@ -10,7 +12,8 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+            <img src="~/images/download.png" />" alt="ASP.NET" class="img-responsive" />
+
             <div class="carousel-caption" role="option">
                 <p>
                     Learn how to build ASP.NET apps that can run anywhere.
@@ -52,7 +55,6 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-
 <div class="row">
     <div class="col-md-3">
         <h2>Application uses</h2>
