added stripe api

--- a/iBudget/Views/Ads/Payment.cshtml
+++ b/iBudget/Views/Ads/Payment.cshtml
@@ -1,7 +1,7 @@
 ﻿@model iBudget.Models.Ad
 
-@*@using Microsoft.Extensions.Options
-@inject IOptions<StripeSettings> Stripe*@
+@using Microsoft.Extensions.Options
+@inject IOptions<StripeSettings> Stripe
 
 
 <form action="UploadCarouselImage" method="POST">
