--- a/iBudget/Views/Ads/Payment.cshtml
+++ b/iBudget/Views/Ads/Payment.cshtml
@@ -10,7 +10,7 @@
     </article>
     <script src="//checkout.stripe.com/v2/checkout.js"
             class="stripe-button"
-            @*data-key="@Stripe.Value.PublishableKey"*@
+            data-key="@Stripe.Value.PublishableKey"
             data-locale="auto"
             data-description="Sample Charge"
             data-amount="5000">
