--- a/iBudget/Views/Customers/Delete.cshtml
+++ b/iBudget/Views/Customers/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Delete</h2>
@@ -18,10 +19,16 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.StreetAddress)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Address)
+            @Html.DisplayFor(model => model.StreetAddress)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.CityStateZip)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CityStateZip)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ApplicationUser)
