--- a/iBudget/Views/Customers/FinancialAnalystDetails.cshtml
+++ b/iBudget/Views/Customers/FinancialAnalystDetails.cshtml
@@ -1,11 +1,8 @@
 ﻿@model iBudget.Models.FinancialAnalyst
-
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "FinancialAnalystDetails";
 }
-
-<h2>Details</h2>
-
+<h2>@Model.Name</h2>
 <div>
     <h4>FinancialAnalyst</h4>
     <hr />
@@ -40,7 +37,6 @@
         <dd>
             @Html.DisplayFor(model => model.Promotions)
         </dd>
-        @Html.HiddenFor(model => model.ApplicationUserId)
         <dt>
             @*str.Link(@model.Link)*@
         </dt>
@@ -54,10 +50,7 @@
 <dd>
     <img src="~/@Model.Image" height="200px" width="300px" />
 </dd>
-
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.FinancialAnalystID">Edit</a> |
-    <a asp-action="Delete" asp-route-id="@Model.FinancialAnalystID">Delete</a>|
-    <a asp-action="Details" asp-route-id="@Model.FinancialAnalystID">Details</a> |
-    <a asp-action="UploadImage" asp-route-id="@Model.FinancialAnalystID">Upload Image</a>
+    <a asp-action="Map" asp-route-id="@Model.FinancialAnalystID">See Location</a> |
+
 </div>
