started working on the calendar api

--- a/iBudget/Views/Budgets/Details.cshtml
+++ b/iBudget/Views/Budgets/Details.cshtml
@@ -14,7 +14,7 @@
             @Html.DisplayNameFor(model => model.Transaction)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Transaction)
+            @Html.DisplayFor(model => model.Transaction.ID)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Amount)
