--- a/iBudget/Views/Budgets/Edit.cshtml
+++ b/iBudget/Views/Budgets/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="BudgetID" />
             <div class="form-group">
-                <label asp-for="Transaction" class="control-label"></label>
-                <input asp-for="Transaction" class="form-control" />
-                <span asp-validation-for="Transaction" class="text-danger"></span>
+                <label asp-for="TransactionID" class="control-label"></label>
+                <select asp-for="TransactionID" class="form-control" asp-items="ViewBag.TransactionID"></select>
+                <span asp-validation-for="TransactionID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Amount" class="control-label"></label>
