--- a/iBudget/Views/Budgets/Create.cshtml
+++ b/iBudget/Views/Budgets/Create.cshtml
@@ -13,9 +13,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Transaction" class="control-label"></label>
-                <input asp-for="Transaction" class="form-control" />
-                <span asp-validation-for="Transaction" class="text-danger"></span>
+                <label asp-for="TransactionID" class="control-label"></label>
+                <select asp-for="TransactionID" class ="form-control" asp-items="ViewBag.TransactionID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Amount" class="control-label"></label>
