--- a/iBudget/Views/Budgets/Delete.cshtml
+++ b/iBudget/Views/Budgets/Delete.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Transaction)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Transaction)
+            @Html.DisplayFor(model => model.Transaction.ID)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Amount)
