--- a/iBudget/Views/Budgets/Index.cshtml
+++ b/iBudget/Views/Budgets/Index.cshtml
@@ -31,7 +31,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Transaction)
+                @Html.DisplayFor(modelItem => item.Transaction.ID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Amount)
