--- a/iBudget/Views/Customers/FInancialAnalystIndex.cshtml
+++ b/iBudget/Views/Customers/FInancialAnalystIndex.cshtml
@@ -32,7 +32,7 @@
                     @Html.DisplayFor(modelItem => item.CityStateZip)
                 </td>
                 <td>
-                    <a asp-action="BusinessDetails" asp-route-id="@item.FinancialAnalystID">View Profile</a>
+                    <a asp-action="FinancialAnalystDetails" asp-route-id="@item.FinancialAnalystID">View Profile</a>
                 </td>
             </tr>
         }
