--- a/iBudget/Views/Calendar/api.cshtml
+++ b/iBudget/Views/Calendar/api.cshtml
@@ -91,3 +91,8 @@
         $("#navigate").click(navigate);
     });
 </script>
+
+
+@*<a href="@Model.Link" target="_blank">
+    @Model.Link
+</a>*@
