--- a/iBudget/Views/Shared/_FinancialAnalystLayout.cshtml
+++ b/iBudget/Views/Shared/_FinancialAnalystLayout.cshtml
@@ -30,10 +30,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Details</a></li>
+                    <li><a asp-area="" asp-controller="FinancialAnalysts" asp-action="Details">Details</a></li>
                     <li><a asp-area="" asp-controller="FinancialAnalysts" asp-action="Edit">Edit Profile</a></li>
                     <li><a asp-area="" asp-controller="Ads" asp-action="Create">Advertise</a></li>
-                    <li><a asp-area="" asp-controller="Chat" asp-action="Chat">Chat</a></li>
+                    <li><a asp-area="" asp-controller="Chat" asp-action="Index">Chat</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
