fixed up the budget model controller and views deleted the transaction model and got the pusher back to working

--- a/iBudget/Views/Budgets/Details.cshtml
+++ b/iBudget/Views/Budgets/Details.cshtml
@@ -11,10 +11,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Transaction)
+            @Html.DisplayNameFor(model => model.Transactions)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Transaction.ID)
+            @Html.DisplayFor(model => model.Transactions)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Amount)
