--- a/iBudget/Views/Budgets/Create.cshtml
+++ b/iBudget/Views/Budgets/Create.cshtml
@@ -13,8 +13,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TransactionID" class="control-label"></label>
-                <select asp-for="TransactionID" class ="form-control" asp-items="ViewBag.TransactionID"></select>
+                <label asp-for="Transactions" class="control-label"></label>
+                <select asp-for="Transactions" class ="form-control" asp-items="ViewBag.Transactions"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Amount" class="control-label"></label>
