got more of the upload carousel image to work but still not uploading

--- a/iBudget/Views/Ads/UploadCarouselImage.cshtml
+++ b/iBudget/Views/Ads/UploadCarouselImage.cshtml
@@ -1,9 +1,9 @@
-﻿@using Microsoft.Extensions.Options
-    @inject IOptions<StripeSettings> Stripe
+﻿@*@using Microsoft.Extensions.Options
+    @inject IOptions<StripeSettings> Stripe*@
 
 @{
     ViewData["Title"] = "View";
-    Layout = "UploadCarouselImage";
+    //Layout = "UploadCarouselImage";
 }
 
 <h2>You successfully paid <strong>$50.00</strong></h2>
