--- a/iBudget/Views/Home/Index.cshtml
+++ b/iBudget/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using iBudget.Models
 @{
     ViewData["Title"] = "Home Page";
 
@@ -12,37 +12,25 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/download.png" />" alt="ASP.NET" class="img-responsive" />
+            @*<img src="~/images/download.png" />" alt="ASP.NET" class="img-responsive" />*@
+            {
+            <img src="~/@Model.CarouselImage" height="200" width="1200" ; class="img-responsive" />
+            }
+            <div class="carousel-caption" role="option">
+                <p>
+                    <span style="font-size:20px;color: whitesmoke;">Discover new Milwaukee businesses</span>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="~/images/l.jpg" height="500" width="1200" class="img-responsive" />
+            <div class="carousel-caption" role="option">
 
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
+            <img src="~/images/Business Event.jpg" height="500" width="1200" class="img-responsive" />
             <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
             </div>
         </div>
     </div>
@@ -55,4 +43,13 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-
+<div class="row">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-3">
+    </div>
+</div>
