customers can see financial analyst profiles

--- a/iBudget/Views/Customers/FInancialAnalystIndex.cshtml
+++ b/iBudget/Views/Customers/FInancialAnalystIndex.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "FinancialAnalystIndex";
 }
-<h2>BusinessIndex</h2>
+<h2>Financial Analysts</h2>
 <table class="table">
     <thead>
         <tr>
