migrated the budget model

--- a/iBudget/Views/Budgets/Edit.cshtml
+++ b/iBudget/Views/Budgets/Edit.cshtml
@@ -28,11 +28,11 @@
                 <input asp-for="MonthlyEarnings" class="form-control" />
                 <span asp-validation-for="MonthlyEarnings" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="TotalAmount" class="control-label"></label>
                 <input asp-for="TotalAmount" class="form-control" />
                 <span asp-validation-for="TotalAmount" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
