--- a/iBudget/Views/Home/Index.cshtml
+++ b/iBudget/Views/Home/Index.cshtml
@@ -18,18 +18,18 @@
             }
             <div class="carousel-caption" role="option">
                 <p>
-                    <span style="font-size:20px;color: whitesmoke;">Discover new Milwaukee businesses</span>
+                    <span style="font-size:20px;color: whitesmoke;"></span>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/l.jpg" height="500" width="1200" class="img-responsive" />
+            <img src="~/images/four.jpg" height="500" width="1200" class="img-responsive" />
             <div class="carousel-caption" role="option">
 
             </div>
         </div>
         <div class="item">
-            <img src="~/images/Business Event.jpg" height="500" width="1200" class="img-responsive" />
+            <img src="~/images/five.jpg" height="500" width="1200" class="img-responsive" />
             <div class="carousel-caption" role="option">
             </div>
         </div>
@@ -45,11 +45,15 @@
 </div>
 <div class="row">
     <div class="col-md-3">
+
     </div>
     <div class="col-md-3">
+
     </div>
     <div class="col-md-3">
+
     </div>
     <div class="col-md-3">
+
     </div>
 </div>
