fixed up the budget controller and the views

--- a/iBudget/Views/Budgets/Delete.cshtml
+++ b/iBudget/Views/Budgets/Delete.cshtml
@@ -24,6 +24,12 @@
             @Html.DisplayFor(model => model.Amount)
         </dd>
         @*<dt>
+            @Html.DisplayNameFor(model => model.AccountNumber)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.AccountNumber)
+        </dd>*@
+        @*<dt>
             @Html.DisplayNameFor(model => model.MonthlyEarnings)
         </dt>
         <dd>
