--- a/iBudget/Views/Budgets/Details.cshtml
+++ b/iBudget/Views/Budgets/Details.cshtml
@@ -34,6 +34,12 @@
         <dd>
             @Html.DisplayFor(model => model.TotalAmount)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.AccountNumber)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.AccountNumber)
+        </dd>
     </dl>
 </div>
 <div>
