tried to get the map and the mailgun apis to work didn't still

--- a/iBudget/Views/Customers/Map.cshtml
+++ b/iBudget/Views/Customers/Map.cshtml
@@ -34,7 +34,7 @@
             map = new google.maps.Map(document.getElementById('map'), mapOptions);
             console.log('TEST');
             var streetName = "@ViewBag.CustomerAddress";
-            var zip = "@ViewBag.CityStateZip";
+            var zip = "@ViewBag.CustomerZip";
             var address = (streetName + " " + zip + " ");
 
 
