fixed up the calendar index view

--- a/iBudget/Views/Budgets/Create.cshtml
+++ b/iBudget/Views/Budgets/Create.cshtml
@@ -27,11 +27,11 @@
                 <input asp-for="MonthlyEarnings" class="form-control" />
                 <span asp-validation-for="MonthlyEarnings" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="AccountNumber" class="control-label"></label>
                 <input asp-for="AccountNumber" class="form-control" />
                 <span asp-validation-for="AccountNumber" class="text-danger"></span>
-            </div>
+            </div>*@
             @*<div class="form-group">
             <label asp-for="TotalAmount" class="control-label"></label>
             <input asp-for="TotalAmount" class="form-control" />
