--- a/iBudget/Views/Home/Index.cshtml
+++ b/iBudget/Views/Home/Index.cshtml
@@ -23,13 +23,13 @@
             </div>
         </div>
         <div class="item">
-            <img src="~/images/four.jpg" height="500" width="1200" class="img-responsive" />
+            <img src="~/images/four.jpg" height="300" width="1200" class="img-responsive" />
             <div class="carousel-caption" role="option">
 
             </div>
         </div>
         <div class="item">
-            <img src="~/images/five.jpg" height="500" width="1200" class="img-responsive" />
+            <img src="~/images/two.jpg" height="300" width="1200" class="img-responsive" />
             <div class="carousel-caption" role="option">
             </div>
         </div>
