--- a/iBudget/Views/Budgets/Edit.cshtml
+++ b/iBudget/Views/Budgets/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="BudgetID" />
             <div class="form-group">
                 <label asp-for="Transactions" class="control-label"></label>
-                <select asp-for="Transactions" class="form-control" />
+                <input asp-for="Transactions" class="form-control" />
                 <span asp-validation-for="Transactions" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,11 +28,11 @@
                 <input asp-for="MonthlyEarnings" class="form-control" />
                 <span asp-validation-for="MonthlyEarnings" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="AccountNumber" class="control-label"></label>
                 <input asp-for="AccountNumber" class="form-control" />
                 <span asp-validation-for="AccountNumber" class="text-danger"></span>
-            </div>
+            </div>*@
             @*<div class="form-group">
             <label asp-for="TotalAmount" class="control-label"></label>
             <input asp-for="TotalAmount" class="form-control" />
