--- a/iBudget/Views/Customers/Edit.cshtml
+++ b/iBudget/Views/Customers/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CityStateZip" class="control-label"></label>
-                <select asp-for="CityStateZip" class="form-control" />
+                <input asp-for="CityStateZip" class="form-control" />
                 <span asp-validation-for="CityStateZip" class="text-danger"></span>
             </div>
             <div class="form-group">
