--- a/iBudget/Views/Ads/Create.cshtml
+++ b/iBudget/Views/Ads/Create.cshtml
@@ -12,13 +12,13 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <div class="checkbox">
                     <label>
                         <input asp-for="AdPost" /> @Html.DisplayNameFor(model => model.AdPost)
                     </label>
                 </div>
-            </div>
+            </div>*@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
