--- a/iBudget/Views/FinancialAnalysts/Index.cshtml
+++ b/iBudget/Views/FinancialAnalysts/Index.cshtml
@@ -1,65 +1,64 @@
-﻿@model IEnumerable<iBudget.Models.FinancialAnalyst>
+﻿@model iBudget.Models.FinancialAnalyst
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Details";
 }
 
-<h2>Financial Analyst</h2>
+<h2>Details</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StreetAddress)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CityStateZip)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Bio)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Promotions)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Link)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StreetAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CityStateZip)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Bio)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Promotions)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Link)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.FinancialAnalystID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.FinancialAnalystID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.FinancialAnalystID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div>
+    <h4>Financial Analyst</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StreetAddress)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StreetAddress)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.CityStateZip)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CityStateZip)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Bio)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Bio)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Promotions)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Promotions)
+        </dd>
+        @Html.HiddenFor(model => model.ApplicationUserId)
+        <dt>
+            @*str.Link(@model.Link)*@
+        </dt>
+        <dd>
+            <a href="@Model.Link" target="_blank">
+                @Model.Link
+            </a>
+        </dd>
+    </dl>
+</div>
+<dd>
+    @Model.Image
+    <img src="~/@Model.Image" height="200px" width="300px" />
+</dd>
+
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.FinancialAnalystID">Edit</a> |
+    <a asp-action="Delete" asp-route-id="@Model.FinancialAnalystID">Delete</a>|
+    <a asp-action="Details" asp-route-id="@Model.FinancialAnalystID">Details</a> |
+    <a asp-action="UploadImage" asp-route-id="@Model.FinancialAnalystID">Upload Image</a>
+</div>
