--- a/iBudget/Views/Shared/_FinancialAnalystLayout.cshtml
+++ b/iBudget/Views/Shared/_FinancialAnalystLayout.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="FinancialAnalysts" asp-action="Edit">Profile</a></li>
+                    <li><a asp-area="" asp-controller="FinancialAnalysts" asp-action="Details">Profile</a></li>
                     <li><a asp-area="" asp-controller="Ads" asp-action="Create">Advertise</a></li>
                     <li><a asp-area="" asp-controller="Chat" asp-action="Index">Chat</a></li>
                 </ul>
