--- a/iBudget/Views/Customers/Create.cshtml
+++ b/iBudget/Views/Customers/Create.cshtml
@@ -28,10 +28,10 @@
                 <input asp-for="CityStateZip" class="form-control" />
                 <span asp-validation-for="CityStateZip" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="Subscribed"></label>
                 <input asp-for="Subscribed" type="checkbox" class="form-control" />
-            </div>*@
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
