commeneted out the details and delete button in the details view of the customer

--- a/iBudget/Views/Shared/_CustomerLayout.cshtml
+++ b/iBudget/Views/Shared/_CustomerLayout.cshtml
@@ -33,7 +33,7 @@
                     <li><a asp-area="" asp-controller="Customers" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Budgets" asp-action="Create">Budget</a></li>
                     <li><a asp-area="" asp-controller="Calendar" asp-action="Index">Calendar for Finances</a></li>
-                    <li><a asp-area="" asp-controller="Customers" asp-action="Map">Banks Closest To You</a></li>
+                    <li><a asp-area="" asp-controller="Customers" asp-action="Map">Banks By You</a></li>
                     <li><a asp-area="" asp-controller="Customers" asp-action="FinancialAnalystIndex">View Financial Analysts</a></li>
                     <li><a asp-area="" asp-controller="Chat" asp-action="Index">Contact a Financial Analyst</a></li>
                 </ul>
