put in a calcultor widget on the index view of the budget page  got the map to show up by commenting out code in the customer controller but only works once a day got my google calendar to show up on the calendar page with the cronfoy api implemented and lastly implemented the twilio api for sms notifications to show up on my phone

--- a/iBudget/Views/Budgets/Index.cshtml
+++ b/iBudget/Views/Budgets/Index.cshtml
@@ -21,39 +21,45 @@
             <th>
                 @Html.DisplayNameFor(model => model.MonthlyEarnings)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TotalAmount)
-            </th>
             @*<th>
-                @Html.DisplayNameFor(model => model.AccountNumber)
+                @Html.DisplayNameFor(model => model.TotalAmount)
             </th>*@
+            @*<th>
+                   @Html.DisplayNameFor(model => model.AccountNumber)
+                </th>*@
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Transactions)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Amount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MonthlyEarnings)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TotalAmount)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.AccountNumber)
-            </td>*@
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.BudgetID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.BudgetID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.BudgetID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Transactions)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Amount)
+                </td>
+                <td>c.
+
+                .
+                0
+                    @Html.DisplayFor(modelItem => item.MonthlyEarnings)
+                </td>
+                @*<td>
+                    @Html.DisplayFor(modelItem => item.TotalAmount)
+                </td>*@
+                @*<td>
+                       @Html.DisplayFor(modelItem => item.AccountNumber)
+                    </td>*@
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.BudgetID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.BudgetID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.BudgetID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<iframe width="219" height="302" src="https://calculator-1.com/outdoor/?f=000000&r=666666" scrolling="no" frameborder="0"></iframe><br />@*<a href="https://calculator-1.com/">Calculator-1.com - The Best Free Online Calculatorн</a>*@
