--- a/iBudget/Views/Customers/Map.cshtml
+++ b/iBudget/Views/Customers/Map.cshtml
@@ -3,54 +3,90 @@
     ViewData["Title"] = "Map";
 }
 <h2>Map</h2>
-<!DOCTYPE html>
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <title>Simple Map</title>
+        <meta name="viewport" content="initial-scale=1.0">
+        <meta charset="utf-8">
+        <style>
+
+            #map {
+                height: 400px;
+                width: 100%;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="map"></div>
+        <script>
+            var geocoder;
+            var map;
+
+            function initMap() {
+                geocoder = new google.maps.Geocoder();
+                var latlng = new google.maps.LatLng(-34.397, 150.644);
+                var mapOptions = {
+                    zoom: 8,
+                    center: latlng
+                }
+                map = new google.maps.Map(document.getElementById('map'), mapOptions);
+                console.log('TEST');
+                var streetName = "@ViewBag.CustomerAddress";
+                var zip = "@ViewBag.CustomerZip";
+                var address = (streetName + " " + zip + " ");
+
+
+                geocoder.geocode({ 'address': address /*+ " " + zip */ }, function (results, status) {
+                    if (status == 'OK') {
+                        map.setCenter(results[0].geometry.location);
+                        var marker = new google.maps.Marker({
+                            map: map,
+                            position: results[0].geometry.location
+                        });
+                    } else {
+                        alert('Geocode was not successful for the following reason: ' + status);
+                    }
+                });
+            }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=@($"{Key.key}")&callback=initMap"
+                async defer></script>
+    </body>
+    </html>
+
+@*<!DOCTYPE html>
 <html>
 <head>
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <style>
-
-        #map {
-            height: 400px;
-            width: 100%;
-        }
+         /* Always set the map height explicitly to define the size of the div
+        * element that contains the map. */
+         #map {
+             height: 100%;
+         }
+         /* Optional: Makes the sample page fill the window. */
+         html, body {
+             height: 100%;
+             margin: 0;
+             padding: 0;
+         }
     </style>
 </head>
 <body>
     <div id="map"></div>
     <script>
-        var geocoder;
         var map;
-
         function initMap() {
-            geocoder = new google.maps.Geocoder();
-            var latlng = new google.maps.LatLng(-34.397, 150.644);
-            var mapOptions = {
-                zoom: 8,
-                center: latlng
-            }
-            map = new google.maps.Map(document.getElementById('map'), mapOptions);
-            console.log('TEST');
-            var streetName = "@ViewBag.CustomerAddress";
-            var zip = "@ViewBag.CustomerZip";
-            var address = (streetName + " " + zip + " ");
-
-
-            geocoder.geocode({ 'address': address /*+ " " + zip */ }, function (results, status) {
-                if (status == 'OK') {
-                    map.setCenter(results[0].geometry.location);
-                    var marker = new google.maps.Marker({
-                        map: map,
-                        position: results[0].geometry.location
-                    });
-                } else {
-                    alert('Geocode was not successful for the following reason: ' + status);
-                }
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: { lat: -34.397, lng: 150.644 },
+                zoom: 8
             });
         }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=@($"{Key.key}")&callback=initMap"
             async defer></script>
 </body>
-</html>
+</html>*@
