added the stock view

--- a/iBudget/Views/FinancialAnalysts/UploadImage.cshtml
+++ b/iBudget/Views/FinancialAnalysts/UploadImage.cshtml
@@ -7,6 +7,9 @@
         <input type="submit" value="Go" />
     </form>
 }
+<div class="form-group">
+    <input type="submit" value="Save Image" class="btn btn-default" />
+</div>
 
 <label>@ViewData["fname"]</label></br>
 <img src="@ViewData["fileLocation"]" />
