--- a/iBudget/Views/Budgets/Create.cshtml
+++ b/iBudget/Views/Budgets/Create.cshtml
@@ -22,11 +22,11 @@
                 <input asp-for="Amount" class="form-control" />
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="MonthlyEarnings" class="control-label"></label>
                 <input asp-for="MonthlyEarnings" class="form-control" />
                 <span asp-validation-for="MonthlyEarnings" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
