--- a/iBudget/Views/FinancialAnalysts/Map.cshtml
+++ b/iBudget/Views/FinancialAnalysts/Map.cshtml
@@ -33,7 +33,7 @@
             }
             map = new google.maps.Map(document.getElementById('map'), mapOptions);
             console.log('TEST');
-            var streetName = "@ViewBag.CustomerAddress";
+            var streetName = "@ViewBag.StreetAddress";
             var zip = "@ViewBag.CityStateZip";
             var address = (streetName + " " + zip + " ");
 
